--- a/effing-macros/Cargo.toml
+++ b/effing-macros/Cargo.toml
@@ -7,5 +7,6 @@ edition = "2021"
 proc-macro = true
 
 [dependencies]
+proc-macro2 = "1.0.42"
 syn = { version = "1.0.98", features = ["full", "fold"] }
 quote = "1.0.20"
