add run_async, which allows handling one effect asynchronously
- the restriction to only one effect may be lifted if i figure out how to do
  that
- comes with free example demonstrating how i solved the function colouring
  problem
- yay

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,11 @@ edition = "2021"
 [dependencies]
 effing-macros = { path = "effing-macros" }
 frunk = "0.4.0"
+
+# for http example
+futures = { version = "0.3.23", optional = true, default-features = false }
+reqwest = { version = "0.11.11", optional = true, features = ["blocking"], default-features = false }
+tokio = { version = "1.20.1", optional = true, features = ["rt"], default-features = false }
+
+[features]
+http = ["futures", "reqwest", "tokio"]
