--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,10 +12,8 @@ license = "MIT OR Apache-2.0"
 effing-macros = { path = "effing-macros" }
 frunk = { version = "0.4.0", default-features = false }
 
+[dev-dependencies]
 # for http example
-futures = { version = "0.3.23", optional = true, default-features = false }
-reqwest = { version = "0.11.11", optional = true, features = ["blocking"], default-features = false }
-tokio = { version = "1.20.1", optional = true, features = ["rt"], default-features = false }
-
-[features]
-http = ["futures", "reqwest", "tokio"]
+futures = { version = "0.3.23", default-features = false }
+reqwest = { version = "0.11.11", features = ["blocking"], default-features = false }
+tokio = { version = "1.20.1", features = ["rt"], default-features = false }
