--- a/effing-macros/Cargo.toml
+++ b/effing-macros/Cargo.toml
@@ -1,7 +1,10 @@
 [package]
 name = "effing-macros"
 version = "0.1.0"
+description = "Macros used with the hottest algebraic effects library in Rust."
 edition = "2021"
+authors = ["Rose Hudson <rose@krx.sh>"]
+license = "MIT OR Apache-2.0"
 
 [lib]
 proc-macro = true
