--- a/effing-macros/Cargo.toml
+++ b/effing-macros/Cargo.toml
@@ -11,5 +11,5 @@ proc-macro = true
 
 [dependencies]
 proc-macro2 = "1.0.42"
-syn = { version = "1.0.98", features = ["extra-traits", "full", "fold"] }
+syn = { version = "1.0.98", features = ["extra-traits", "full", "visit-mut"] }
 quote = "1.0.20"
