--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,4 +19,7 @@ reqwest = { version = "0.11.11", optional = true, features = ["blocking"], defau
 tokio = { version = "1.20.1", optional = true, features = ["rt"], default-features = false }
 
 [features]
+default = ["nondet"]
 http = ["futures", "reqwest", "tokio"]
+nondet = ["std"]
+std = []
