--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,12 +20,11 @@ reqwest = { version = "0.11.11", features = ["blocking"], default-features = fal
 tokio = { version = "1.20.1", features = ["rt"], default-features = false }
 
 [features]
-nondet = []
-std = []
+alloc = []
 
 [[example]]
 name = "nondet"
-required-features = ["nondet"]
+required-features = ["alloc"]
 
 [package.metadata.docs.rs]
-features = ["nondet", "std"]
+features = ["alloc"]
